--- a/src/app/components/plot/plot.component.html
+++ b/src/app/components/plot/plot.component.html
@@ -1,1 +1,7 @@
-<plotly-plot [data]="graph.data" [layout]="graph.layout"></plotly-plot>
+<plotly-plot
+  [data]="data"
+  [layout]="layout"
+  [config]="config"
+  [useResizeHandler]="true"
+  [style]="{ position: 'relative', width: '100%', height: '100%' }"
+></plotly-plot>
