Fix margins and paddings

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,5 +1,5 @@
 <app-page>
-  <div class="container-fluid">
+  <div class="container-fluid p-0">
     <div class="row upper-row mt-3">
       <div class="col-4">
         <app-map></app-map>
