--- a/src/app/pages/shared/page/page.component.html
+++ b/src/app/pages/shared/page/page.component.html
@@ -2,5 +2,7 @@
   <app-header></app-header>
 </header>
 <main>
-  <ng-content></ng-content>
+  <div class="mt-3 ml-3 mr-3 mb-3">
+    <ng-content></ng-content>
+  </div>
 </main>
