--- a/src/app/pages/shared/header/header.component.html
+++ b/src/app/pages/shared/header/header.component.html
@@ -7,9 +7,9 @@
     <li class="nav-item">
       <a
         class="nav-link"
-        routerLink="/"
+        routerLink="/home"
         routerLinkActive="active"
-        [routerLinkActiveOptions]="{ exact: true }"
+        [routerLinkActiveOptions]="{ exact: false }"
         >Home</a
       >
     </li>
@@ -18,7 +18,7 @@
         class="nav-link"
         routerLink="/dashboard"
         routerLinkActive="active"
-        [routerLinkActiveOptions]="{ exact: true }"
+        [routerLinkActiveOptions]="{ exact: false }"
         >Dashboard</a
       >
     </li>
