--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,10 +1,10 @@
 <app-page>
-  <ul ngbNav [activeId]="route.fragment | async" class="nav-tabs">
-    <li [ngbNavItem]="link.path" *ngFor="let link of links">
-      <a ngbNavLink [routerLink]="link.path" >{{
-        link.title
-      }}</a>
+  <ul ngbNav [activeId]="activeTabUrl" class="nav-tabs">
+    <li [ngbNavItem]="tab.url" *ngFor="let tab of tabs">
+      <a ngbNavLink [routerLink]="tab.url">{{ tab.name }}</a>
     </li>
   </ul>
-  <router-outlet></router-outlet>
+  <div class="mt-3">
+    <router-outlet></router-outlet>
+  </div>
 </app-page>
