Update Help component

--- a/src/app/pages/dashboard/help/help.component.html
+++ b/src/app/pages/dashboard/help/help.component.html
@@ -1,1 +1,106 @@
-<p>help works!</p>
+<div class="container-fluid p-0">
+  <div class="card border rounded-3 mb-3">
+    <div class="card-header rounded-3 text-white bg-primary">
+      <i class="fas fa-flag"></i>&nbsp;W3C recommendations
+    </div>
+    <div class="card-body">
+      <div class="alert alert-primary" role="alert">
+        <a
+          href="https://www.w3.org/TR/sparql11-update/"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="alert-link"
+          >SPARQL 1.1 Update Language</a
+        >
+      </div>
+      <div class="alert alert-primary" role="alert">
+        <a
+          href="https://www.w3.org/TR/sparql11-query/"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="alert-link"
+          >SPARQL 1.1 Query Language</a
+        >
+      </div>
+      <div class="alert alert-primary" role="alert">
+        <a
+          href="https://www.w3.org/TR/sparql11-protocol/"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="alert-link"
+          >SPARQL 1.1 Protocol</a
+        >
+      </div>
+    </div>
+  </div>
+
+  <div class="card border rounded-3 mb-3">
+    <div class="card-header rounded-3 text-white bg-primary">
+      <i class="fab fa-firstdraft"></i>&nbsp;SEPA working drafts
+    </div>
+    <div class="card-body">
+      <div class="alert alert-warning" role="alert">
+        <a
+          href="http://mml.arces.unibo.it/TR/sepa.html"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="alert-link"
+          >SPARQL Event Processing Architecture</a
+        >
+      </div>
+      <div class="alert alert-warning" role="alert">
+        <a
+          href="http://mml.arces.unibo.it/TR/sparql11-se-protocol.html"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="alert-link"
+          >SPARQL 1.1 Secure Event Protocol</a
+        >
+      </div>
+      <div class="alert alert-warning" role="alert">
+        <a
+          href="http://mml.arces.unibo.it/TR/sparql11-subscribe.html"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="alert-link"
+          >SPARQL 1.1 Subscribe Language</a
+        >
+      </div>
+      <div class="alert alert-warning" role="alert">
+        <a
+          href="http://mml.arces.unibo.it/TR/jsap.html"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="alert-link"
+          >JSON SPARQL Application Profile</a
+        >
+      </div>
+    </div>
+  </div>
+
+  <div class="card border rounded-3">
+    <div class="card-header rounded-3 text-white bg-primary">
+      <i class="fas fa-info"></i>&nbsp;Contacts
+    </div>
+    <div class="card-body">
+      <div class="alert alert-success" role="alert">
+        <a
+          href="https://site.unibo.it/wot/en"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="alert-link"
+          >Dynamic Linked Data and Web of Things Research @ ARCES</a
+        >
+      </div>
+      <div class="alert alert-success" role="alert">
+        <a
+          href="https://github.com/arces-wot/SEPA"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="alert-link"
+          >Join us and contribute&nbsp;<i class="fab fa-github"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
