Make Home page more responsive

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,18 +1,18 @@
 <app-page>
   <div class="container-fluid p-0">
     <div class="row upper-row mt-3">
-      <div class="col-4">
+      <div class="col-md-4">
         <app-map></app-map>
       </div>
-      <div class="col-8">
+      <div class="col-md-8">
         <app-plot></app-plot>
       </div>
     </div>
     <div class="row lower-row mt-3">
-      <div class="col-sm">
+      <div class="col-md-4">
         <app-places-tree></app-places-tree>
       </div>
-      <div class="col-xl-8">
+      <div class="col-md-8">
         <app-observations></app-observations>
       </div>
     </div>
