--- a/src/app/components/places-tree/places-tree.component.html
+++ b/src/app/components/places-tree/places-tree.component.html
@@ -2,41 +2,43 @@
   <div class="card-header">
     Feature of interest
   </div>
-  <div class="card-body places-tree-body">
-    <ul
-      ngbNav
-      [activeId]="selectedPlace.placeURI"
-      class="nav-pills"
-      [roles]="false"
-      [orientation]="'vertical'"
-      *ngIf="shownTree"
-    >
-      <li [ngbNavItem]="shownTree.node.placeURI">
-        <a
-          ngbNavLink
-          (click)="
-            onSelectedPlace({
-              placeURI: shownTree.node.placeURI,
-              placeLabel: shownTree.node.placeLabel
-            })
-          "
-          >{{ shownTree.node.placeLabel }}</a
-        >
-        <ul class="nav-pills" *ngFor="let child of shownTree.children">
-          <li [ngbNavItem]="child.node.placeURI">
-            <a
-              ngbNavLink
-              (click)="
-                onSelectedPlace({
-                  placeURI: child.node.placeURI,
-                  placeLabel: child.node.placeLabel
-                })
-              "
-              >{{ child.node.placeLabel }}</a
-            >
-          </li>
-        </ul>
-      </li>
-    </ul>
-  </div>
+  <app-loader [loading]="isLoading">
+    <div class="card-body places-tree-body">
+      <ul
+        ngbNav
+        [activeId]="selectedPlace.placeURI"
+        class="nav-pills"
+        [roles]="false"
+        [orientation]="'vertical'"
+        *ngIf="shownTree"
+      >
+        <li [ngbNavItem]="shownTree.node.placeURI">
+          <a
+            ngbNavLink
+            (click)="
+              onSelectedPlace({
+                placeURI: shownTree.node.placeURI,
+                placeLabel: shownTree.node.placeLabel
+              })
+            "
+            >{{ shownTree.node.placeLabel }}</a
+          >
+          <ul class="nav-pills" *ngFor="let child of shownTree.children">
+            <li [ngbNavItem]="child.node.placeURI">
+              <a
+                ngbNavLink
+                (click)="
+                  onSelectedPlace({
+                    placeURI: child.node.placeURI,
+                    placeLabel: child.node.placeLabel
+                  })
+                "
+                >{{ child.node.placeLabel }}</a
+              >
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </app-loader>
 </div>
