--- a/src/app/pages/shared/header/header.component.html
+++ b/src/app/pages/shared/header/header.component.html
@@ -16,10 +16,19 @@
     <li class="nav-item">
       <a
         class="nav-link"
-        routerLink="/dashboard"
+        routerLink="/query"
         routerLinkActive="active"
         [routerLinkActiveOptions]="{ exact: false }"
-        >Dashboard</a
+        >SPARQL</a
+      >
+    </li>
+    <li class="nav-item">
+      <a
+        class="nav-link"
+        routerLink="/help"
+        routerLinkActive="active"
+        [routerLinkActiveOptions]="{ exact: false }"
+        >Help</a
       >
     </li>
   </ul>
