Add AQI properties card and fix loading logic

--- a/src/app/components/observations/observations.component.html
+++ b/src/app/components/observations/observations.component.html
@@ -14,6 +14,11 @@
         [sourceLabel]="'ISTAT'"
         [sourceURL]="'http://dati.istat.it/Index.aspx?DataSetCode=DCIS_POPRES1#'"
       ></app-properties-card>
+      <app-properties-card
+        [title]="'Qualità dell\'aria'"
+        [sourceLabel]="'AQI'"
+        [sourceURL]="'http://dati.istat.it/Index.aspx?DataSetCode=DCIS_POPRES1#'"
+      ></app-properties-card>
     </div>
   </div>
 </div>
