Fix number format in ObservationBadge component

--- a/src/app/components/observation-badge/observation-badge.component.html
+++ b/src/app/components/observation-badge/observation-badge.component.html
@@ -1,1 +1,1 @@
-<button type="button" [class]="class" (click)="onClick()">{{ propertyLabel + '&nbsp;' }}<span class="badge badge-light">{{ value }}</span></button>
+<button type="button" [class]="class" (click)="onClick()">{{ propertyLabel + '&nbsp;' }}<span class="badge badge-light">{{ value | number : '1.0-2' }}</span></button>
