Add unit symbol to ObservationBadge component

--- a/src/app/components/properties-card/properties-card.component.html
+++ b/src/app/components/properties-card/properties-card.component.html
@@ -20,6 +20,7 @@
             [property]="obs.property.value"
             [propertyLabel]="obs.label.value"
             [value]="obs.value.value"
+            [unitSymbol]="(obs.symbol) ? obs.symbol.value : ''"
           ></app-observation-badge>
         </div>
         <div *ngIf="!observations && receivedData > 1">
