Add routing config for Superset dashboards

--- a/src/app/pages/shared/header/header.component.html
+++ b/src/app/pages/shared/header/header.component.html
@@ -16,6 +16,24 @@
     <li class="nav-item">
       <a
         class="nav-link"
+        routerLink="/covidFree"
+        routerLinkActive="active"
+        [routerLinkActiveOptions]="{ exact: false }"
+        >Covid-Free</a
+      >
+    </li>
+    <li class="nav-item">
+      <a
+        class="nav-link"
+        routerLink="/airQuality"
+        routerLinkActive="active"
+        [routerLinkActiveOptions]="{ exact: false }"
+        >Air Quality</a
+      >
+    </li>
+    <li class="nav-item">
+      <a
+        class="nav-link"
         routerLink="/query"
         routerLinkActive="active"
         [routerLinkActiveOptions]="{ exact: false }"
