--- a/src/app/pages/superset/superset.component.html
+++ b/src/app/pages/superset/superset.component.html
@@ -4,7 +4,7 @@
     seamless
     frameBorder="0"
     scrolling="yes"
-    src="http://sepa.vaimee.it:8088/superset/dashboard/covidFreeDashboard"
+    src="https://sepa.vaimee.it:8088/superset/dashboard/covidFreeDashboard"
   >
   </iframe>
   <iframe
@@ -12,7 +12,7 @@
     seamless
     frameBorder="0"
     scrolling="yes"
-    src="http://sepa.vaimee.it:8088/superset/dashboard/airQualityDashboard"
+    src="https://sepa.vaimee.it:8088/superset/dashboard/airQualityDashboard"
   >
   </iframe>
 </app-page>
